# bip39-rusty

./: Cargo.toml  README.md
.github/workflows/: Integration tests.yml
examples/: generate_mnemonics.rs
src/: error.rs  lib.rs  main.rs  prelude.rs  types.rs
src/language/: mod.rs
src/utils/: mod.rs
tests/: integration_tests.rs
